@@ -9,6 +9,7 @@ Change log next version
 * You can now define and expect cookies without values using e.g. given().cookie("some_cookie").. or expect().cookie("some_cookie").. (issue 69).
 * You can now specify default request and response content type using RestAssured.requestContentType(..) and RestAssured.responseContentType(..). (issue 68).
 * Support for specifying string content types (issue 72).
+* Support for specifying default request and response specifications (issue 67).
 
 Change log 1.1.7 (2011-04-26)
 -----------------------------
